--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <div class="user-section">
       <a><i class="fa fa-compass"></i></a>
       <a><i class="fa fa-heart"></i></a>
-      <a><% if user_signed_in? %>
+      <% if user_signed_in? %>
           <a href="<%= user_path(current_user)%>">
             <i class="fa fa-user"></i>
           </a>
@@ -34,8 +34,7 @@
           <a href="<%= new_user_session_path%>">
             <i class="fa fa-sign-in"></i>
           </a>
-        <% end %></a>
-
+        <% end %>
     </div>
   </div>
 </nav>
