--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
         </a>
 
       </div>
-      <ul class="posts">
+      <ul class="home">
         <li><span>0</span> posts</li>
         <li><span>0</span> followers</li>
         <li><span>0</span> following</li>
