--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -148,7 +148,7 @@
     padding: 4px 10px;
     font-weight: 500;
   }
-  ul.posts{
+  ul.home{
     padding-left: 0;
     > li{
       display: inline;
