--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +12,7 @@
 <nav class="navbar navbar-light bg-light d-flex">
   <div class="container">
     <div class="logo">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="<%= home_index_path %>">
         <%= fa_stacked_icon "camera-retro inverse", base: "circle"%>
         ProstoGram
       </a>
