--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -55,104 +55,65 @@
          padding: 20px;
        }
      }
-     .pagination{
-       span{
+
+     .pagination {
+       span {
          padding-right: 10px;
        }
      }
    }
+
+   .post-show {
+     margin: 30px 5px 0;
+     border: 1px solid #DADADA;
+
+     .col-md-8 {
+       padding: 0;
+
+       .image {
+         width: 100%;
+       }
+     }
+
+     .user {
+       display: flex;
+       padding: 10px 0;
+       border-bottom: 1px solid #efefef;
+
+       .avatar {
+         width: 40px;
+         height: 40px;
+         margin: 8px;
+
+         img {
+           width: 100%;
+           height: 100%;
+           border: 1px solid #efefef;
+           border-radius: 50%;
+         }
+       }
+
+       .username {
+         padding-top: 15px;
+         color: #262626;
+         font-size: 14px;
+         font-weight: 600;
+
+         &:hover {
+           text-decoration: none;
+         }
+       }
+     }
+
+     .description {
+       padding: 15px 0;
+     }
+   }
+   .delete{
+     padding-top: 20px;
+     a{
+       font-size: 15px;
+       text-decoration: underline;
+     }
+   }
  }
-  .post-show {
-      margin: 30px 5px 0;
-      border: 1px solid #DADADA;
-
-      .posts {
-        margin: 50px 180px 10px;
-
-        .post {
-          border: 1px solid #dbdbdb;
-          margin: 60px 0;
-          border-radius: 3px;
-
-          .user {
-            border-bottom: 1px solid #efefef;
-            display: flex;
-
-            .avatar {
-              width: 30px;
-              height: 30px;
-              margin: 8px;
-
-              img {
-                width: 100%;
-                height: 100%;
-                border: 1px solid #efefef;
-                border-radius: 50%;
-              }
-            }
-
-            .username {
-              padding-top: 13px;
-              color: #262626;
-              font-size: 14px;
-              font-weight: 600;
-
-              &:hover {
-                text-decoration: none;
-              }
-            }
-          }
-
-          .main-image {
-            width: 100%;
-            border-bottom: 1px solid #efefef;
-          }
-
-          .description {
-            padding: 20px;
-          }
-        }
-      }
-
-      .col-md-8 {
-        padding: 0;
-
-        .image {
-          width: 100%;
-        }
-      }
-
-      .user {
-        display: flex;
-        padding: 10px 0;
-        border-bottom: 1px solid #efefef;
-
-        .avatar {
-          width: 40px;
-          height: 40px;
-          margin: 8px;
-
-          img {
-            width: 100%;
-            height: 100%;
-            border: 1px solid #efefef;
-            border-radius: 50%;
-          }
-        }
-
-        .username {
-          padding-top: 15px;
-          color: #262626;
-          font-size: 14px;
-          font-weight: 600;
-
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-
-      .description {
-        padding: 15px 0;
-      }
-    }
