--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,18 +47,7 @@
 <footer class="container footer">
   <nav class="navbar d-flex">
     <ul>
-      <li>ABOUT US
-      </li>
-      <li>SUPPORT</li>
-      <li>PRESS</li>
-      <li>API</li>
-      <li>JOBS</li>
-      <li>PRIVACY</li>
-      <li>TERMS</li>
-      <li>DIRECTORY</li>
-      <li>PROFILES</li>
-      <li>HASHTAGS</li>
-      <li>LANGUAGE</li>
+      <li>Just a text with standart garbage, non functional</li>
     </ul>
     <p> © 2021 ProstoGram </p>
   </nav>
