--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="post-show row">
   <div class ="col-md-8">
-    <%=image_tag @post.image, calss: 'image' %>
+    <%=image_tag @post.image, class: 'image' %>
   </div>
   <div class="col-md-4">
     <div class="user">
