--- a/app/views/home/_post.html.erb
+++ b/app/views/home/_post.html.erb
@@ -1,9 +1,9 @@
 <section class="post">
   <div class="user">
     <div class="avatar">
-      <% if current_user.avatar.attached? %>
+      <% if post.user.avatar.attached? %>
         <%= link_to user_path(post.user) do %>
-        <%= image_tag current_user.avatar %>
+        <%= image_tag post.user.avatar %>
         <% end %>
       <% end %>
     </div>
