--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,30 +2,34 @@
   <div class="profile row">
     <div class="col-md-4 avatar">
       <div class="wrapper">
-        <% if current_user.avatar.attached? %>
-          <%= image_tag current_user.avatar %>
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar %>
         <% end %>
       </div>
     </div>
 
     <div class="col-md-8 basic-info">
       <div class="user-wrapper">
-        <h2 class="username"><%= current_user.username %></h2>
-        <a class="edit-profile" href="<%= edit_user_path(current_user) %>">
-          <button>Edit Profile</button>
-        </a>
-        <a class="log-out" href="<%=destroy_user_session_path%>" data-method="delete">
-        <button>Log out</button>
-        </a>
-
+        <h2 class="username"><%= @user.username %></h2>
+        <% if current_user.present? && current_user == @user %>
+          <a class="edit-profile" href="<%= edit_user_path(@user) %>">
+            <button>Edit Profile</button>
+          </a>
+          <a class="log-out" href="<%=destroy_user_session_path%>" data-method="delete">
+          <button>Log out</button>
+          </a>
+        <% end %>
+        <% if current_user.present? && current_user != @user %>
+          <%= link_to("Follow", follows_path(followed_user_id: @user.id), method:  :post) %>
+        <% end %>
       </div>
       <ul class="home">
         <li><span><%= @posts.count  %></span> posts</li>
-        <li><span>0</span> followers</li>
-        <li><span>0</span> following</li>
+        <li><span><%= @user.followers %></span> followers</li>
+        <li><span><%= @user.followed %></span> following</li>
       </ul>
-      <h2 class="name"><%= current_user.name %></h2>
-      <%=link_to current_user.website, current_user.website, class:  'website' %>
+      <h2 class="name"><%= @user.name %></h2>
+      <%=link_to @user.website, @user.website, class:  'website' %>
     </div>
     </div>
     <div class="user-tabs">
@@ -33,9 +37,9 @@
         <i class="fa fa-th"></i>
         POSTS
       </a>
-      <a class="tab" href="">
-        <i class="fa fa-bookmark"></i>
-        SAVED
+      <a class="tab" href="<%= new_post_path %>">
+        <i class="fa fa-check"></i>
+        NEW POST
       </a>
       <a class="tab" href="">
         <i class="fa fa-tag"></i>
