--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -149,18 +149,9 @@
     padding: 4px 10px;
     font-weight: 500;
   }
-  .follow{
-    margin-left: 20px;
-    margin-top: 5px;
-  }
-  .follow button{
-    background-color: transparent;
-    border-radius: 5px;
-    border: 1px solid #dbdbdb;
-    color: #262626;
-    font-size: 14px;
-    padding: 4px 10px;
-    font-weight: 500;
+  .btn{
+    margin: 5px;
+    margin-left: 10px;
   }
   ul.home{
     padding-left: 0;
