--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -113,7 +113,7 @@
      }
    }
  .delete{
-     padding-top: 20px;
+     padding-bottom: 10px;
      a{
        font-size: 15px;
        text-decoration: underline;
