--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
     </div>
     <br>
     <div class="text-center">
-      <%= f.submit 'Create Post', class: 'btn btn-primary' %>
+      <%= f.submit 'Create Post', class: 'btn btn-success' %>
     </div>
   <% end %>
 </div>
