--- a/app/views/home/_post.html.erb
+++ b/app/views/home/_post.html.erb
@@ -19,4 +19,11 @@
       <% end %>
     <% end %>
   </div>
+  <% user_like = post.likes.find { |like| like.user_id == current_user.id} %>
+  <% if user_like %>
+    <%= button_to 'Unlike', post_like_path(post, user_like), method: :delete %>
+  <% else %>
+    <%= button_to 'Like', post_likes_path(post), method: :post %>
+  <% end %>
+  <p><%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 </section>
