--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 <body>
 <!--Navigation Bar-->
-<nav class="navbar navbar-light bg-light d-flex">
+<nav class="navbar navbar-light bg-secondary d-flex">
   <div class="container">
     <div class="logo">
       <a class="navbar-brand" href="<%= home_index_path %>">
@@ -45,7 +45,7 @@
 
 <!--Footer-->
 <footer class="container footer">
-  <nav class="navbar d-flex">
+  <nav class="navbar bg-light d-flex">
     <ul>
       <li>Just a text with standart garbage, non functional</li>
     </ul>
