--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,6 +46,10 @@
         <i class="fa fa-check"></i>
         NEW POST
       </a>
+      <a class="tab" href="<%= feed_posts_path %>">
+        <i class="fa fa-feed"></i>
+        Feed
+      </a>
     </div>
   </div>
   <div class="user-images">
