--- a/app/views/feed_posts/index.html.erb
+++ b/app/views/feed_posts/index.html.erb
@@ -1,4 +1,6 @@
 <div class="feed">
+
+  <h3 style="text-align: center;"> You feed  <%= link_to("to Home", home_index_path, :class => 'btn btn-secondary')%> </h3>
   <div class="feed_posts">
     <% @posts.each do |post| %>
       <%= render partial: 'post', locals: { post: post } %>
