--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <div class="homepage">
+  <h3 style="text-align: center;"> Homepage  <%= link_to("to Feed", feed_posts_path, :class => 'btn btn-secondary')%></h3>
   <div class="posts">
     <% @posts.each do |post| %>
       <%= render partial: 'post', locals: { post: post } %>
