--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,8 +35,10 @@
       <% end %>
       <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
      <div class="delete">
-       <% if current_user.posts.exists?(@post.id) %>
-         <%= link_to 'Remove', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'}, :class => "btn btn-warning" %>
+       <% if current_user.present? %>
+         <% if current_user.posts.exists?(@post.id) %>
+           <%= link_to 'Remove', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'}, :class => "btn btn-warning" %>
+         <% end %>
        <% end %>
       </div>
     </div>
