--- a/app/views/followed_users/index.html.erb
+++ b/app/views/followed_users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Followed</h1>
 
 <ul>
-  <% @followed_user.each do |followed| %>
+  <% @followed.each do |followed| %>
     <li>
       <%= link_to(followed.email,user_path(followed)) %>
     </li>
